--- a/style.css
+++ b/style.css
@@ -2,4 +2,131 @@ body {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+a {
+    text-decoration: none;
+    color: cadetblue;
+}
+a:hover {
+    text-decoration-line: underline;
+    text-decoration-style: solid;
+    text-decoration-color: cornflowerblue;
+    color: chartreuse;
+}
+a:active {
+    color: crimson;
+}
+.title {
+    text-decoration: line-through;
+    text-decoration-color: gray;
+    color: blueviolet;
+}
+#content {
+    font-size: 15px;
+    font-weight: 600;
+}
+.UTC {
+    font-size: 15px;
+    font-weight: bold;
+}
+#name {
+    color: darkslateblue;
+}
+#like {
+    color: rgb(239, 113, 134);
+}
+#school {
+    color: blue;
+}
+#minute {
+    display: inline;
+}
+#container {
+    width: 1050px;
+    height: 600px;
+    margin: 25px 0 0 240px;
+    display: grid;
+    grid-template-columns: 350px 350px 350px;
+    grid-template-rows: 200px 200px 200px;
+}
+#text1,#text2,#text6,#text7,#text3 {
+    border-width: 3px;
+}
+#Wind,#Fire,#Earth,#Water,#Synthetic {
+    font-size: 20px;
+    font-weight: 600;
+}
+#text1 {
+    grid-row: 1/span 2;
+    border-style: solid dashed solid solid;
+    border-color: green;
+}
+#Wind {
+    margin: 190px 0 0 150px;
+    color: green;
+}
+#Wt1,#Et6 {
+    margin: 50px 0 0 70px;
+}
+#PW1,#PE6 {
+    display: none;
+    width: 64px;
+    height: 64px;
+    margin: -200px 0 0 140px;
+}
+#text2 {
+    grid-column: 2/span 2;
+    border-style: solid solid dashed solid;
+    border-color: red;
+}
+#Fire {
+    margin: 100px 0 0 340px;
+    color: red
+}
+#Ft2,#Wt7 {
+    margin: -20px 0 0 135px;
+}
+#PF2,#PW7 {
+    display: none;
+    width: 64px;
+    height: 64px;
+    margin: -50px 0 0 520px;
+}
+#text6 {
+    grid-row: 2/span 2;
+    grid-column: 3/span 1;
+    border-style: solid solid solid dashed;
+    border-color: yellow;
+}
+#Earth {
+    margin: 190px 0 0 150px;
+    color: yellow;
+}
+#text7 {
+    grid-column: 1/span 2;
+    grid-row: 3/span 1;
+    border-style: dashed solid solid solid;
+    border-color: blue;
+}
+#Water {
+    margin: 100px 0 0 330px;
+    color: blue;
+}
+#text3 {
+    grid-column: 2/span 1;
+    grid-row: 2/span 1;
+    background-color: black;
+    border-style: dashed;
+    border-color: red yellow blue green;
+}
+#Synthetic {
+    margin: 60px 0 0 90px;
+    font-style: italic;
+    color: white;
+}
+#St3 {
+    margin: 40px 0 0 95px;
+    font-size: 20px;
+    color: white;
 }
