--- a/style.css
+++ b/style.css
@@ -26,6 +26,19 @@ a:active {
     font-size: 15px;
     font-weight: 600;
 }
+.profile {
+    width: 150px;
+    height: 150px;
+    border-radius: 10px;
+    margin: -160px 0 0 1240px;
+    border-radius: 12px;
+    border: 2px solid black;
+}
+.profile > img {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
 .UTC {
     font-size: 15px;
     font-weight: bold;
@@ -45,7 +58,7 @@ a:active {
 #container {
     width: 1050px;
     height: 600px;
-    margin: 25px 0 0 240px;
+    margin: 25px 0 0 200px;
     display: grid;
     grid-template-columns: 350px 350px 350px;
     grid-template-rows: 200px 200px 200px;
@@ -134,7 +147,7 @@ a:active {
     width: 1100px;
     height: 250px;
     border: 8px double black;
-    margin: 100px 0 0 220px;
+    margin: 100px 0 0 175px;
 }
 #choose {
     margin: 40px 0 0 70px;
