--- a/style.css
+++ b/style.css
@@ -291,12 +291,14 @@ a:active {
     height: 330px;
     margin-top: 5px;
     border: 2px solid gray;
+    border-radius: 5px;
 }
 #l-1 {
     margin: 20px 0 0 50px;
 }
-#l-1 > label,#l-2 > label,#l-3 > label,#l-4 > label,#l-5 > label,#l-6 > label {
+#l-1 > label,#l-2 > label,#l-3 > label,#l-4 > label,#l-5 > label,#l-6 > label,#l-9 > label {
     font-size: 20px;
+    font-style: italic;
 }
 #l-1 > input,#l-2 > input {
     width: 200px;
@@ -305,31 +307,44 @@ a:active {
 #l-2 {
     margin: -35px 0 0 350px;
 }
-#l-3,#l-6,#l-7 {
+#l-3,#l-7 {
     margin: 30px 0 0 50px;
 }
 #l-3 > input {
-    width: 135px;
+    width: 155px;
     height: 30px;
 }
 #l-4 {
     margin: -32px 0 0 350px;
 }
-#l-4 > div {
-    margin: -20px 0 0 90px;
+#l-4 > select {
+    width: 100px;
+    height: 30px;
 }
-#l-4 > div > #lt-2,#l-4 > div > #lt-3 {
-    margin-top: 10px;
+#l-4 > select > option {
+    margin-top: -10px;
 }
-#l-4 > div > div > span {
-    font-size: 18px;
+#op-1,#op-2 {
+    color: white;
+}
+#op-1 {
+    background-color: royalblue;
+}
+#op-2 {
+    background-color: palevioletred;
+}
+#op-3 {
+    color: white;
 }
 #l-5 {
-    margin: -25px 0 0 50px;
+    margin: 35px 0 0 50px;
 }
 #l-5 > input {
     width: 175px;
     height: 30px;
+}
+#l-6 {
+    margin: 35px 0 0 50px;
 }
 #l-6 > input {
     width: 300px;
@@ -337,6 +352,10 @@ a:active {
 }
 #l-7 > input {
     width: 50px;
+    height: 30px;
+}
+#l-10 > input {
+    width: 70px;
     height: 30px;
 }
 #l-8 {
@@ -348,6 +367,61 @@ a:active {
     border: 2px solid black;
     border-radius: 10px;
 }
+#l-8 > label {
+    display: block;
+    margin: 5px 0 0 45px;
+}
+#l-8 > label > span {
+    font-weight: bold;
+}
 #l-8 > input {
-    margin-top: 15px;
+    margin: 10px 0 0 25px;
+    width: 106px;
+    border: 2px solid gray;
+    border-radius: 5px;
+    font-size: 17px;
+}
+#l-8 > div > img {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+#l-9 {
+    margin: -35px 0 0 350px;
+}
+#l-9 > input {
+    height: 30px;
+}
+#l-10 {
+    margin: -30px 0 0 150px;
+}
+#l-1 > input,#l-2 > input,#l-5 > input,#l-6 > input,#l-3 > input,#l-9 > input,#l-4 > select {
+    border: 2px solid rgb(145, 145, 145);
+    border-radius: 5px;
+    font-size: 17px;
+}
+#l-3 > input {
+    color: black;
+}
+#l-4 > label > .l-t1 {
+    color: palevioletred;
+}
+#l-4 > label > .l-t2 {
+    color: royalblue;
+}
+#l-7 > input {
+    border: 2px solid green;
+    color: green;
+}
+#l-10 > input {
+    border: 2px solid red;
+    color: red;
+}
+#l-10 > input:hover {
+    background-color: rgb(145, 0, 0);
+}
+#l-7 > input,#l-10 > input {
+    border-radius: 5px;
+    font-size: 17px;
+    background-color: rgb(210, 210, 210);
 }
