--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@ body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+#name {
+    color: darkslateblue;
+}
+#name:hover {
+    color: rgb(0, 255, 255);
+    font-style: italic;
+}
 a {
     text-decoration: none;
     color: cadetblue;
