--- a/style.css
+++ b/style.css
@@ -485,6 +485,404 @@ body {
     margin-top: 20px;
     font-style: italic;
 }
+.container-heart {
+    width: 800px;
+    height: 590px;
+    margin: 100px 0 0 360px;
+}
+.container-heart > div {
+    width: 800px;
+    height: 540px;
+    display: grid;
+    grid-template-columns: 400px 400px;
+    grid-template-rows: 540px;
+}
+.container-heart > p {
+    margin-left: 380px;
+    width: 40px;
+    color: rgb(0, 255, 0);
+    border-bottom: 2px dashed red;
+}
+#heart-b,#heart-r {
+    position: relative;
+}
+#b1,#b2,#b3,#b4,#b5,#b6,#b7,#b8,#b9,#b10 {
+    position: absolute;
+    right: 0;
+    height: 54px;
+    background-color: rgb(0, 210, 0);
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease;
+}
+#r1,#r2,#r3,#r4,#r5,#r6,#r7,#r8,#r9,#r10 {
+    position: absolute;
+    left: 0;
+    height: 54px;
+    background-color: red;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease;
+}
+#b1,#r1 {
+    width: 180px;
+}
+@keyframes bl18s {
+    0% {
+        background-color: rgb(0, 210, 0);
+        width: 180px;
+    }
+    100% {
+        background-color: red;
+        width: 200px;
+    }
+}
+@keyframes bl18t {
+    0% {
+        background-color: red;
+        width: 200px;
+    }
+    100% {
+        background-color: rgb(0, 210, 0);
+        width: 180px;
+    }
+}
+@keyframes br18s {
+    0% {
+        background-color: red;
+        width: 180px;
+    }
+    100% {
+        background-color: rgb(0, 210, 0);
+        width: 200px;
+    }
+}
+@keyframes br18t {
+    0% {
+        background-color: rgb(0, 210, 0);
+        width: 200px;
+    }
+    100% {
+        background-color: red;
+        width: 180px;
+    }
+}
+#b2,#r2 {
+    top: 54px;
+    width: 300px;
+}
+@keyframes bl26s {
+    0% {
+        background-color: rgb(0, 210, 0);
+        width: 300px;
+    }
+    100% {
+        background-color: red;
+        width: 320px;
+    }
+}
+@keyframes bl26t {
+    0% {
+        background-color: red;
+        width: 320px;
+    }
+    100% {
+        background-color: rgb(0, 210, 0);
+        width: 300px;
+    }
+}
+@keyframes br26s {
+    0% {
+        background-color: red;
+        width: 300px;
+    }
+    100% {
+        background-color: rgb(0, 210, 0);
+        width: 320px;
+    }
+}
+@keyframes br26t {
+    0% {
+        background-color: rgb(0, 210, 0);
+        width: 320px;
+    }
+    100% {
+        background-color: red;
+        width: 300px;
+    }
+}
+#b3,#r3 {
+    top: 108px;
+    width: 340px;
+}
+@keyframes bl3s {
+    0% {
+        background-color: rgb(0, 210, 0);
+        width: 340px;
+    }
+    100% {
+        background-color: red;
+        width: 360px;
+    }
+}
+@keyframes bl3t {
+    0% {
+        background-color: red;
+        width: 360px;
+    }
+    100% {
+        background-color: rgb(0, 210, 0);
+        width: 340px;
+    }
+}
+@keyframes br3s {
+    0% {
+        background-color: red;
+        width: 340px;
+    }
+    100% {
+        background-color: rgb(0, 210, 0);
+        width: 360px;
+    }
+}
+@keyframes br3t {
+    0% {
+        background-color: rgb(0, 210, 0);
+        width: 360px;
+    }
+    100% {
+        background-color: red;
+        width: 340px;
+    }
+}
+#b4,#r4 {
+    top: 162px;
+    width: 380px;
+}
+@keyframes bl4s {
+    0% {
+        background-color: rgb(0, 210, 0);
+        width: 380px;
+    }
+    100% {
+        background-color: red;
+        width: 400px;
+    }
+}
+@keyframes bl4t {
+    0% {
+        background-color: red;
+        width: 400px;
+    }
+    100% {
+        background-color: rgb(0, 210, 0);
+        width: 380px;
+    }
+}
+@keyframes br4s {
+    0% {
+        background-color: red;
+        width: 380px;
+    }
+    100% {
+        background-color: rgb(0, 210, 0);
+        width: 400px;
+    }
+}
+@keyframes br4t {
+    0% {
+        background-color: rgb(0, 210, 0);
+        width: 400px;
+    }
+    100% {
+        background-color: red;
+        width: 380px;
+    }
+}
+#b5,#r5 {
+    top: 216px;
+    width: 360px;
+}
+@keyframes bl5s {
+    0% {
+        background-color: rgb(0, 210, 0);
+        width: 360px;
+    }
+    100% {
+        background-color: red;
+        width: 380px;
+    }
+}
+@keyframes bl5t {
+    0% {
+        background-color: red;
+        width: 380px;
+    }
+    100% {
+        background-color: rgb(0, 210, 0);
+        width: 360px;
+    }
+}
+@keyframes br5s {
+    0% {
+        background-color: red;
+        width: 360px;
+    }
+    100% {
+        background-color: rgb(0, 210, 0);
+        width: 380px;
+    }
+}
+@keyframes br5t {
+    0% {
+        background-color: rgb(0, 210, 0);
+        width: 380px;
+    }
+    100% {
+        background-color: red;
+        width: 360px;
+    }
+}
+#b6,#r6 {
+    top: 270px;
+    width: 300px;
+}
+#b7,#r7 {
+    top: 324px;
+    width: 240px;
+}
+@keyframes bl7s {
+    0% {
+        background-color: rgb(0, 210, 0);
+        width: 240px;
+    }
+    100% {
+        background-color: red;
+        width: 260px;
+    }
+}
+@keyframes bl7t {
+    0% {
+        background-color: red;
+        width: 260px;
+    }
+    100% {
+        background-color: rgb(0, 210, 0);
+        width: 240px;
+    }
+}
+@keyframes br7s {
+    0% {
+        background-color: red;
+        width: 240px;
+    }
+    100% {
+        background-color: rgb(0, 210, 0);
+        width: 260px;
+    }
+}
+@keyframes br7t {
+    0% {
+        background-color: rgb(0, 210, 0);
+        width: 260px;
+    }
+    100% {
+        background-color: red;
+        width: 240px;
+    }
+}
+#b8,#r8 {
+    top: 378px;
+    width: 180px;
+}
+#b9,#r9 {
+    top: 432px;
+    width: 120px;
+}
+@keyframes bl9s {
+    0% {
+        background-color: rgb(0, 210, 0);
+        width: 120px;
+    }
+    100% {
+        background-color: red;
+        width: 140px;
+    }
+}
+@keyframes bl9t {
+    0% {
+        background-color: red;
+        width: 140px;
+    }
+    100% {
+        background-color: rgb(0, 210, 0);
+        width: 120px;
+    }
+}
+@keyframes br9s {
+    0% {
+        background-color: red;
+        width: 120px;
+    }
+    100% {
+        background-color: rgb(0, 210, 0);
+        width: 140px;
+    }
+}
+@keyframes br9t {
+    0% {
+        background-color: rgb(0, 210, 0);
+        width: 140px;
+    }
+    100% {
+        background-color: red;
+        width: 120px;
+    }
+}
+#b10,#r10 {
+    top: 486px;
+    width: 60px;
+}
+@keyframes bl10s {
+    0% {
+        background-color: rgb(0, 210, 0);
+        width: 60px;
+    }
+    100% {
+        background-color: red;
+        width: 80px;
+    }
+}
+@keyframes bl10t {
+    0% {
+        background-color: red;
+        width: 80px;
+    }
+    100% {
+        background-color: rgb(0, 210, 0);
+        width: 60px;
+    }
+}
+@keyframes br10s {
+    0% {
+        background-color: red;
+        width: 60px;
+    }
+    100% {
+        background-color: rgb(0, 210, 0);
+        width: 80px;
+    }
+}
+@keyframes br10t {
+    0% {
+        background-color: rgb(0, 210, 0);
+        width: 80px;
+    }
+    100% {
+        background-color: red;
+        width: 60px;
+    }
+}
 .container-form {
     width: 850px;
     height: 360px;
