--- a/style.css
+++ b/style.css
@@ -13,17 +13,12 @@ body {
     font-style: italic;
 }
 #github {
-    text-decoration: none;
-    color: cadetblue;
+    display: block;
+    margin: -50px 0 0 175px;
 }
-#github:hover {
-    text-decoration-line: underline;
-    text-decoration-style: solid;
-    text-decoration-color: cornflowerblue;
-    color: chartreuse;
-}
-#github:active {
-    color: crimson;
+#github > img {
+    width: 30px;
+    height: 30px;
 }
 .title {
     color: blueviolet;
