--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body {
 #github {
     display: block;
     margin: -50px 0 0 175px;
+    width: 30px;
+    height: 30px;
 }
 #github > img {
     width: 30px;
