--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ body {
     margin: -50px 0 0 175px;
     width: 30px;
     height: 30px;
+    border-radius: 15px;
+}
+#github:hover {
+    box-shadow: 0px 0px 5px 1px black;
 }
 #github > img {
     width: 30px;
@@ -25,25 +29,15 @@ body {
 .title {
     color: blueviolet;
     font-size: 18px;
+    text-decoration: line-through;
+    text-decoration-color: gray;
+    text-decoration-thickness: 2px;
     transition: color 1s ease-in-out, font-size 1.5s ease-in-out 1s;
-}
-.title::after {
-    content: "";
-    position: absolute;
-    width: 154px;
-    height: 2px;
-    margin-top: 10px;
-    margin-left: -154px;
-    background-color: gray;
-    transition: width 0.5s ease 1s, margin-left 1.5s ease-in-out 1s;
-}
-.title:hover::after {
-    width: 0px;
-    margin-left: -165px;
 }
 .title:hover {
     color: red;
     font-size: 22px;
+    text-decoration: none;
 }
 #content {
     margin-top: -95px;
@@ -112,6 +106,19 @@ body {
 }
 #school {
     color: blue;
+    position: relative;
+}
+#school::after {
+    position: absolute;
+    content: "";
+    width: 241px;
+    height: 1.5px;
+    background-color: blue;
+    right: 0px;
+    display: none;
+}
+#school:hover::after {
+    display: inline;
 }
 #school:hover {
     text-decoration: underline;
