--- a/style.css
+++ b/style.css
@@ -12,9 +12,26 @@ body {
     color: rgb(0, 255, 255);
     font-style: italic;
 }
+.container-icon {
+    width: 90px;
+    height: 30px;
+    margin: -50px 0 0 175px;
+}
+#dark {
+    display: block;
+    width: 35px;
+    height: 35px;
+    border-radius: 20px;
+    margin: -33px 0 0 50px;
+    background-color: black;
+    box-shadow: 0px 0px 5px 2px rgb(230, 230, 15);
+}
+#dark > img {
+    width: 35px;
+    height: 35px;
+}
 #github {
     display: block;
-    margin: -50px 0 0 175px;
     width: 30px;
     height: 30px;
     border-radius: 15px;
