--- a/style.css
+++ b/style.css
@@ -6,11 +6,37 @@ body {
 }
 #name {
     color: darkslateblue;
+}
+#name {
+    color: darkslateblue;
     transition: color 2s ease;
 }
 #name:hover {
     color: rgb(0, 255, 255);
     font-style: italic;
+}
+#like {
+    color: rgb(239, 113, 134);
+}
+#school {
+    color: blue;
+}
+#school:hover {
+    text-decoration: underline;
+    text-decoration-color: blue;
+}
+.title {
+    color: blueviolet;
+    font-size: 18px;
+    text-decoration: line-through;
+    text-decoration-color: gray;
+    text-decoration-thickness: 2px;
+    transition: color 1s ease-in-out, font-size 1.5s ease-in-out 1s;
+}
+.title:hover {
+    color: red;
+    font-size: 22px;
+    text-decoration: none;
 }
 .container-icon {
     width: 90px;
@@ -27,8 +53,8 @@ body {
     box-shadow: 0px 0px 5px 2px rgb(230, 230, 15);
 }
 #dark > img {
-    width: 35px;
-    height: 35px;
+    width: 100%;
+    height: 100%;
 }
 #github {
     display: block;
@@ -40,21 +66,8 @@ body {
     box-shadow: 0px 0px 5px 1px black;
 }
 #github > img {
-    width: 30px;
-    height: 30px;
-}
-.title {
-    color: blueviolet;
-    font-size: 18px;
-    text-decoration: line-through;
-    text-decoration-color: gray;
-    text-decoration-thickness: 2px;
-    transition: color 1s ease-in-out, font-size 1.5s ease-in-out 1s;
-}
-.title:hover {
-    color: red;
-    font-size: 22px;
-    text-decoration: none;
+    width: 100%;
+    height: 100%;
 }
 #content {
     margin-top: -95px;
@@ -69,7 +82,8 @@ body {
 .container-calendar > p {
     font-size: 17px;
     font-weight: bold;
-    margin: 10px 0 0 40px;
+    text-align: center;
+    margin-top: 10px;
 }
 .calendar {
     width: 150px;
@@ -115,31 +129,8 @@ body {
     color: darkslateblue;
     font-weight: bold;
 }
-#name {
-    color: darkslateblue;
-}
-#like {
-    color: rgb(239, 113, 134);
-}
-#school {
-    color: blue;
-    position: relative;
-}
-#school::after {
-    position: absolute;
-    content: "";
-    width: 241px;
-    height: 1.5px;
-    background-color: blue;
-    right: 0px;
-    display: none;
-}
-#school:hover::after {
-    display: inline;
-}
-#school:hover {
-    text-decoration: underline;
-    text-decoration-color: blue;
+#title-pro {
+    text-align: center;
 }
 .title-music {
     width: 1060px;
@@ -147,7 +138,7 @@ body {
     margin: 10px 0 0 230px;
 }
 .title-music > p {
-    margin: 0 0 0 460px;
+    text-align: center;
     font-size: 18px;
     font-style: italic;
 }
@@ -166,7 +157,7 @@ body {
 .title-music > div {
     width: 1050px;
     height: 368px;
-    margin: 10px 0 0 0;
+    margin-top: -10px;
     border: 4px solid gray;
     border-radius: 16px;
     overflow-x: scroll;
@@ -193,7 +184,8 @@ body {
     border: 3px dashed gray;
 }
 .video-limitid > p {
-    margin: 10px 0 0 480px;
+    text-align: center;
+    margin-top: 10px;
 }
 .video-limitid > p > span {
     font-weight: bold;
@@ -229,14 +221,17 @@ body {
     height: 680px;
     margin: 100px 0 0 235px;
 }
-.container-element > p {
+#element-text {
     width: 125px;
-    height: 30px;
-    margin-left: 460px;
-    padding: 10px 0 0 10px;
-    font-size: 18px;
+    height: 40px;
+    margin: 20px auto;
     border: 2px solid;
     border-color: red yellow blue green;
+}
+#element-text > p {
+    font-size: 18px;
+    text-align: center;
+    margin: 10px 0 10px 0;
 }
 #container {
     width: 1050px;
@@ -520,7 +515,7 @@ body {
     grid-template-rows: 540px;
 }
 .container-heart > p {
-    margin-left: 380px;
+    margin: 15px auto;
     width: 40px;
     color: rgb(0, 255, 0);
     border-bottom: 2px dashed red;
@@ -911,8 +906,9 @@ body {
     margin: 200px 0 0 475px;
 }
 .container-sqare > p {
-    margin: 150px 0 0 230px;
+    margin: 150px auto;
     font-size: 18px;
+    width: 115px;
 }
 #ts1 {
     color: red;
@@ -1055,14 +1051,14 @@ body {
     margin: 100px 0 0 340px;
 }
 .container-form > p {
-    margin: 0 0 0 320px;
+    text-align: center;
     font-size: 20px;
     font-weight: bold;
 }
 .container-form > form {
     width: 850px;
     height: 330px;
-    margin-top: 5px;
+    margin-top: -5px;
     border: 2px solid gray;
     box-shadow: 0px 0px 10px 1px gray;
     border-radius: 5px;
