--- a/dark mode/dark_style.css
+++ b/dark mode/dark_style.css
@@ -137,9 +137,10 @@ body {
 .title-music {
     width: 1060px;
     height: 410px;
-    margin: 10px 0 0 230px;
+    margin: 15px auto;
 }
 .title-music > p {
+    margin-top: 0;
     text-align: center;
     font-size: 18px;
     font-style: italic;
@@ -178,7 +179,7 @@ body {
 .video-limitid {
     width: 1331px;
     height: 800px;
-    margin: 100px 0 0 90px;
+    margin: 100px auto;
 }
 .video-limitid > video {
     width: 1330px;
@@ -221,7 +222,7 @@ body {
 .container-element {
     width: 1050px;
     height: 680px;
-    margin: 100px 0 0 235px;
+    margin: 100px auto;
 }
 #element-text {
     width: 125px;
@@ -445,7 +446,7 @@ body {
     height: 250px;
     border: 8px double white;
     box-shadow: 0px 0px 10px 2px gray;
-    margin: 100px 0 0 205px;
+    margin: 100px auto;
 }
 #choose {
     margin: 40px 0 0 70px;
@@ -507,7 +508,7 @@ body {
 .container-heart {
     width: 800px;
     height: 590px;
-    margin: 100px 0 0 360px;
+    margin: 100px auto;
 }
 .container-heart > div {
     width: 800px;
@@ -516,11 +517,15 @@ body {
     grid-template-columns: 400px 400px;
     grid-template-rows: 540px;
 }
-.container-heart > p {
+#heart-text {
     margin: 15px auto;
     width: 40px;
-    color: rgb(0, 255, 0);
+    height: 20px;
     border-bottom: 2px dashed red;
+}
+#heart-text > p {
+    color: rgb(0, 255, 0);
+    margin-top: 0;
 }
 #heart-b,#heart-r {
     position: relative;
@@ -905,12 +910,17 @@ body {
 .container-sqare {
     width: 550px;
     height: 740px;
-    margin: 200px 0 0 475px;
+    margin: 200px auto;
 }
-.container-sqare > p {
+#sqare-text {
     margin: 150px auto;
-    font-size: 18px;
     width: 115px;
+    height: 20px;
+}
+#sqare-text > p {
+    font-size: 18px;
+    margin-top: 0;
+    text-align: center;
 }
 #ts1 {
     color: red;
@@ -1050,7 +1060,7 @@ body {
 .container-form {
     width: 850px;
     height: 360px;
-    margin: 100px 0 0 340px;
+    margin: 100px auto;
 }
 .container-form > p {
     text-align: center;
