--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ body {
 .title-music {
     width: 1060px;
     height: 410px;
-    margin: 15px auto;
+    margin: 15px 0 0 230px;
 }
 .title-music > p {
     margin-top: 0;
@@ -177,7 +177,7 @@ body {
 .video-limitid {
     width: 1331px;
     height: 800px;
-    margin: 100px auto;
+    margin: 100px 0 0 90px;
 }
 .video-limitid > video {
     width: 1330px;
@@ -220,7 +220,7 @@ body {
 .container-element {
     width: 1050px;
     height: 680px;
-    margin: 100px auto;
+    margin: 100px 0 0 235px;
 }
 #element-text {
     width: 125px;
@@ -444,7 +444,7 @@ body {
     height: 250px;
     border: 8px double black;
     box-shadow: 0px 0px 10px 2px gray;
-    margin: 100px auto;
+    margin: 100px 0 0 205px;
 }
 #choose {
     margin: 40px 0 0 70px;
@@ -506,7 +506,7 @@ body {
 .container-heart {
     width: 800px;
     height: 590px;
-    margin: 100px auto;
+    margin: 100px 0 0 360px;
 }
 .container-heart > div {
     width: 800px;
@@ -908,7 +908,7 @@ body {
 .container-sqare {
     width: 550px;
     height: 740px;
-    margin: 200px auto;
+    margin: 200px 0 0 475px;
 }
 #sqare-text {
     margin: 150px auto;
@@ -1058,7 +1058,7 @@ body {
 .container-form {
     width: 850px;
     height: 360px;
-    margin: 100px auto;
+    margin: 100px 0 0 340px;
 }
 .container-form > p {
     text-align: center;
