update logic for pages

--- a/dark mode/dark_style.css
+++ b/dark mode/dark_style.css
@@ -265,7 +265,8 @@ body {
     border-color: green;
 }
 #Wind {
-    margin: 190px 0 0 150px;
+    margin-top: 190px;
+    text-align: center;
     color: green;
 }
 #Wt1 {
@@ -292,13 +293,14 @@ body {
     }
 }
 #Wt1,#Et6 {
-    margin: 50px 0 0 70px;
+    margin-top: 50px;
+    text-align: center;
 }
 #PW1,#PE6 {
     display: none;
     width: 64px;
     height: 64px;
-    margin: -200px 0 0 140px;
+    margin: -240px 0 0 140px;
 }
 #text2 {
     grid-column: 2/span 2;
@@ -348,7 +350,8 @@ body {
     border-color: yellow;
 }
 #Earth {
-    margin: 190px 0 0 150px;
+    margin-top: 190px;
+    text-align: center;
     color: yellow;
 }
 #Et6 {
@@ -414,10 +417,12 @@ body {
     border-color: white;
 }
 #Synthetic {
-    margin: 90px 0 0 140px;
+    margin-top: 90px;
+    text-align: center;
 }
 #St3 {
-    margin: 40px 0 0 95px;
+    margin-top: 40px;
+    text-align: center;
     color: black;
 }
 @keyframes Synthetics {
